--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ sphinx:
   config:
     bibtex_reference_style: author_year
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
-    mathjax_config:
+    mathjax3_config:
       tex:
         macros:
           "mba": "\\boldsymbol{a}"
