--- a/_toc.yml
+++ b/_toc.yml
@@ -2,9 +2,9 @@ format: jb-book
 root: index
 
 parts:
-  - caption: Notes
-    chapters:
-    - file: lectures/01_intro.md
+  # - caption: Notes
+  #   chapters:
+  #   - file: lectures/01_distributions.md
 
   - caption: Assignments
     chapters:
