--- a/_toc.yml
+++ b/_toc.yml
@@ -7,6 +7,7 @@ parts:
     - file: lectures/01_distributions.ipynb
     - file: lectures/02_contingency_tables.md
     - file: lectures/03_logreg.md
+    - file: lectures/04_expfam.md
     
   - caption: Assignments
     chapters:
