--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ execute:
     - 'hw3.ipynb'
     - 'hw4.ipynb'
     - '07_bayes_glms.ipynb'
+    - '07_bayes_glms_soln.ipynb'
 only_build_toc_files: true
 
 # Add a bibtex file so that we can create citations
