--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ bibtex_bibfiles:
 
 # In _config.yml
 sphinx:
+  extra_extensions:
+    - sphinx_proof
   config:
     bibtex_reference_style: label
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
