adding mixture notes

--- a/_toc.yml
+++ b/_toc.yml
@@ -12,6 +12,7 @@ parts:
     - file: lectures/06_bayes.md
     - file: lectures/07_bayes_glms_soln.ipynb
     - file: lectures/08_sparse_glms.md
+    - file: lectures/09_mixtures.md
     
   - caption: Assignments
     chapters:
