--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ parts:
     - file: lectures/08_sparse_glms.md
     - file: lectures/09_mixtures.md
     - file: lectures/10_hmms.md
+    - file: lectures/11_vaes.md
     
   - caption: Assignments
     chapters:
