--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ sphinx:
           "mbc": "\\boldsymbol{c}"
           "mbd": "\\boldsymbol{d}"
           "mbe": "\\boldsymbol{e}"
+          "mbf": "\\boldsymbol{f}"
           "mbg": "\\boldsymbol{g}"
           "mbh": "\\boldsymbol{h}"
           "mbi": "\\boldsymbol{i}"
@@ -61,6 +62,7 @@ sphinx:
           "mbC": "\\boldsymbol{C}"
           "mbD": "\\boldsymbol{D}"
           "mbE": "\\boldsymbol{E}"
+          "mbF": "\\boldsymbol{F}"
           "mbG": "\\boldsymbol{G}"
           "mbH": "\\boldsymbol{H}"
           "mbI": "\\boldsymbol{I}"
